# task-pool

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt
cmake/modules/: Findgoogletest.cmake
include/task-pool/: task-pool.h
src/: spmc-queue.h  stdatomic.cpp  stdatomic.h  task-pool.c  task-pool.cpp  task-queue.h  task-queue.hpp
test/: pool_test.cpp  spmc-queue_test.cpp  task-queue_test.cpp
